--- a/public_html/demo.html
+++ b/public_html/demo.html
@@ -10,7 +10,7 @@
     <a href="./index.html">home</a><br />
 
     <div class="demo">
-      <table>
+      <table class="demo">
         <form action="">
           <tr>
             <td class="td1">Username</td>
@@ -25,7 +25,10 @@
             <td><input type="password" name="" id="" /></td>
           </tr>
           <tr>
-            <th><a href="./">Log In</a></th>
+            <td class="login"><a class="demo" href="./">Log In</a></td>
+          </tr>
+          <tr>
+            <td class="demo1"><a class="demo1" href="">quên mật Khẩu?</a></td>
           </tr>
         </form>
       </table>
